[gd_scene load_steps=5 format=2]

[ext_resource path="res://scene/character_select/character_select.gd" type="Script" id=1]
[ext_resource path="res://font/UI.tres" type="DynamicFont" id=2]
[ext_resource path="res://scene/character_select/profile_box/profile_box.tscn" type="PackedScene" id=3]
[ext_resource path="res://scene/component/loading_screen/loading_screen.tscn" type="PackedScene" id=4]

[node name="Scn_CharacterSelect" type="Node2D"]
script = ExtResource( 1 )

[node name="MgC_ProfileList" type="MarginContainer" parent="."]
margin_left = 40.0
margin_top = 40.0
margin_right = 980.0
margin_bottom = 560.0

[node name="VBox_ProfileList" type="VBoxContainer" parent="MgC_ProfileList"]
margin_right = 940.0
margin_bottom = 520.0
custom_constants/separation = 50

[node name="Lbl_Title" type="Label" parent="MgC_ProfileList/VBox_ProfileList"]
margin_right = 940.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 2 )
text = "Select your profile"
align = 1

[node name="HBox_ProfileList" type="HBoxContainer" parent="MgC_ProfileList/VBox_ProfileList"]
margin_top = 109.0
margin_right = 940.0
margin_bottom = 509.0
rect_min_size = Vector2( 0, 400 )
custom_constants/separation = 20

[node name="Pnl_Profile1" parent="MgC_ProfileList/VBox_ProfileList/HBox_ProfileList" instance=ExtResource( 3 )]

[node name="Pnl_Profile2" parent="MgC_ProfileList/VBox_ProfileList/HBox_ProfileList" instance=ExtResource( 3 )]
margin_left = 320.0
margin_right = 620.0

[node name="Pnl_Profile3" parent="MgC_ProfileList/VBox_ProfileList/HBox_ProfileList" instance=ExtResource( 3 )]
margin_left = 640.0
margin_right = 940.0

[node name="Cpn_Loading" parent="." instance=ExtResource( 4 )]

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
